tests/suite/fail/generated/stdlib_import/fail_stdlib____missing__.ny.ny
//~ ERROR import not found
import "stdlib/__missing__.ny"
fn main() {
    print(0)
}
